[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/CamShake.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Shotgun.gd" type="Script" id=4]
[ext_resource path="res://assets/Gun_engine.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/8bit.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/Reload.gd" type="Script" id=7]
[ext_resource path="res://sprites/ammo.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Menu Items.gd" type="Script" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Load_Minigame.gd" type="Script" id=11]
[ext_resource path="res://assets/Coins.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Coins.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Save.gd" type="Script" id=14]
[ext_resource path="res://sprites/char.png" type="Texture" id=15]
[ext_resource path="res://sprites/char2.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 30 )

[sub_resource type="Animation" id=2]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/path = NodePath(".:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 1 ), SubResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 0, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 15 ), Vector2( 25, 15 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15, 30 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 15 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "swin"
tracks/0/type = "value"
tracks/0/path = NodePath(".:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 15 ) ]
}

[sub_resource type="Animation" id=6]
length = 2600.0
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 99999.0
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "timer"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ PoolVector2Array( -50, 40, 50, 40 ), PoolVector2Array( -50, 40, -50, 40 ), PoolVector2Array( -50, 40, 50, 40 ) ]
}

[sub_resource type="Animation" id=11]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 52.4462, -61.2451 ), Vector2( 101.358, -61.2451 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../Weapons/Label")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reload"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Line2D3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.95837, -61.2451 ), Vector2( 100.934, -61.2451 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "load_minigame"
}, {
"args": [  ],
"method": "unload_minigame"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../Weapons/Label")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reload"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Line2D2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Line2D3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 52.4462, -61.2451 ), Vector2( 51.4995, -72.1319 ), Vector2( 52.4462, -61.2451 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 1, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../Weapons/Label")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Line2D3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 4, 2 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="Groud_Middle" type="RayCast2D" parent="."]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Ground_Left" type="RayCast2D" parent="."]
position = Vector2( -15, 30 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Ground_Right" type="RayCast2D" parent="."]
position = Vector2( 15, 30 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Ledge_Grab_R" type="RayCast2D" parent="."]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="Ledge_Grab_R2" type="RayCast2D" parent="."]
position = Vector2( 0, -35.3274 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="Ledge_Grab_L" type="RayCast2D" parent="."]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( -20, 0 )

[node name="Ledge_Grab_L2" type="RayCast2D" parent="."]
position = Vector2( 0, -35.3274 )
enabled = true
cast_to = Vector2( -20, 0 )

[node name="Health" parent="." instance=ExtResource( 2 )]
invicility = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
editor/display_folded = true
shape = SubResource( 1 )

[node name="Colision" type="AnimationPlayer" parent="CollisionShape2D"]
anims/crouch = SubResource( 2 )
anims/normal = SubResource( 3 )
anims/roll = SubResource( 4 )
anims/swin = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -135 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 3 )

[node name="Weapons" type="Node2D" parent="."]
editor/display_folded = true

[node name="Sword" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 400
timer = 0.5
damage = 7
mag = 20
lifespan = 0.15
infinite = true
screen_shake = 0
have = true

[node name="bow and arrow" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 500
spreed = 3
timer = 0.0
gravity = 2
damage = 7
curve = -100
lifespan = 5.0
screen_shake = 0
ammo = 40

[node name="Revolver" parent="Weapons" instance=ExtResource( 5 )]
speed = 400
timer = 1.0
damage = 5
mag = 6
lifespan = 5.0
ammo = 30

[node name="Double Barrel Shotgun" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 400
bullet_n = 15
spreed = 20
timer = 0.5
mag = 2
lifespan = 5.0
shot = 2
ammo = 40

[node name="Bomb" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 400
timer = 0.5
gravity = 25
damage = 4
curve = -600
lifespan = 5.0
pierce = true
particle_size = 45
ammo = 10

[node name="Sniper" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 800
timer = 0.5
damage = 2
mag = 5
lifespan = 5.0
pierce = true
screen_shake = 10
ammo = 10

[node name="Machine Gun" parent="Weapons" instance=ExtResource( 5 )]
speed = 400
mag = 30
lifespan = 5.0
ammo = 60

[node name="FireTrowher" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 150
spreed = 10
timer = 0.1
gravity = -2
curve = 50
mag = 100
lifespan = 2.0
particle_size = 30
screen_shake = 0

[node name="Label" type="Label" parent="Weapons"]
margin_left = 43.0737
margin_top = -27.2958
margin_right = 83.0737
margin_bottom = -13.2958
custom_fonts/font = ExtResource( 6 )
text = "00/00"
script = ExtResource( 7 )

[node name="ammo" type="Sprite" parent="Weapons/Label"]
position = Vector2( -9.95112, 6.13795 )
texture = ExtResource( 8 )

[node name="Menu Items" type="CanvasLayer" parent="."]
editor/display_folded = true
script = ExtResource( 9 )

[node name="Menu Anim" type="AnimationPlayer" parent="Menu Items"]
anims/close = SubResource( 6 )
anims/closed = SubResource( 7 )
anims/open = SubResource( 8 )
anims/opened = SubResource( 9 )
next/close = "closed"
next/open = "opened"

[node name="Menu" type="Node2D" parent="Menu Items"]
position = Vector2( 512, 165 )

[node name="Polygon2D" type="Polygon2D" parent="Menu Items/Menu"]
scale = Vector2( 1.2, 1.2 )
color = Color( 0, 0, 0, 0.498039 )
polygon = PoolVector2Array( -120, 0, -80, -80, 0, -120, 80, -80, 120, 0, 80, 80, 0, 120, -80, 80 )

[node name="icon0" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( -120, 0 )
texture = ExtResource( 10 )

[node name="icon1" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( -80, -80 )
texture = ExtResource( 10 )

[node name="icon2" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 0, -120 )
texture = ExtResource( 10 )

[node name="icon3" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 80, -80 )
texture = ExtResource( 10 )

[node name="icon4" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 120, 0 )
texture = ExtResource( 10 )

[node name="icon5" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 80, 80 )
texture = ExtResource( 10 )

[node name="icon6" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 0, 120 )
texture = ExtResource( 10 )

[node name="icon7" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( -80, 80 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Menu Items/Menu"]
margin_left = -20.4633
margin_top = -7.0
margin_right = 19.537
margin_bottom = 7.0
rect_pivot_offset = Vector2( -0.51178, -0.0862732 )
custom_fonts/font = ExtResource( 6 )
align = 1
autowrap = true

[node name="Bullet Time" type="Line2D" parent="Menu Items/Menu"]
position = Vector2( 0, 29.9285 )
scale = Vector2( 0.71, 1 )
points = PoolVector2Array( -50, 40, 50, 40 )
default_color = Color( 1, 1, 1, 1 )
texture_mode = 612703316
begin_cap_mode = 2
end_cap_mode = 2

[node name="Bullet Time" type="AnimationPlayer" parent="Menu Items/Menu/Bullet Time"]
anims/timer = SubResource( 10 )

[node name="Line2D2" type="Line2D" parent="Menu Items/Menu/Bullet Time"]
points = PoolVector2Array( -50, 40, 50, 40 )
default_color = Color( 1, 1, 1, 0.25098 )
texture_mode = 1021447008
begin_cap_mode = 2
end_cap_mode = 2

[node name="Load_Minigame" type="Node2D" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 11 )

[node name="Line2D" type="Line2D" parent="Load_Minigame"]
position = Vector2( 2.64075, -51.4948 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 5.0
default_color = Color( 0, 0, 0, 0.501961 )
texture_mode = 612703316

[node name="Line2D2" type="Line2D" parent="Load_Minigame"]
position = Vector2( 51.392, -56.7652 )
points = PoolVector2Array( 0, 0, 0, 10 )
default_color = Color( 1, 1, 1, 0.501961 )
texture_mode = 1021447008

[node name="Line2D3" type="Line2D" parent="Load_Minigame"]
position = Vector2( 3.95837, -61.2451 )
points = PoolVector2Array( 0, 0, 0, 20 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 612703316

[node name="Minigame" type="AnimationPlayer" parent="Load_Minigame"]
anims/Failure = SubResource( 11 )
anims/Load = SubResource( 12 )
anims/Succes = SubResource( 13 )

[node name="Coins" parent="." instance=ExtResource( 12 )]
script = ExtResource( 13 )

[node name="Save" type="Node" parent="."]
script = ExtResource( 14 )

[node name="char" type="Sprite" parent="."]
visible = false
position = Vector2( 5.23666, -26.3542 )
texture = ExtResource( 15 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -8.21547, -5.35549 )
z_index = 1

[node name="Hips" type="Sprite" parent="Node2D"]
position = Vector2( 9.31056, 16.3023 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 7.625, 107.313, 21, 17.75 )

[node name="Belt" type="Sprite" parent="Node2D/Hips"]
position = Vector2( -1.97421, -6.73163 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 6.625, 93.5, 15.125, 9.125 )

[node name="body" type="Sprite" parent="Node2D/Hips/Belt"]
position = Vector2( 1.26223, -8.36227 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 5.5, 66, 17.5, 20.75 )

[node name="arm up" type="Sprite" parent="Node2D/Hips/Belt/body"]
position = Vector2( 4.56733, -4.43989 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 4.87874, 3.99989 )
region_enabled = true
region_rect = Rect2( 106.25, 7.0625, 10.125, 13.25 )

[node name="arm down" type="Sprite" parent="Node2D/Hips/Belt/body/arm up"]
position = Vector2( 6.04005, 7.58219 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 1.20303, 4.5292 )
region_enabled = true
region_rect = Rect2( 111.75, 22.6875, 8.125, 12.875 )

[node name="hand" type="Sprite" parent="Node2D/Hips/Belt/body/arm up/arm down"]
position = Vector2( 2.44712, 9.93858 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 112, 37.9375, 5.625, 5.875 )

[node name="arm up2" type="Sprite" parent="Node2D/Hips/Belt/body"]
position = Vector2( -5.45658, -5.08245 )
scale = Vector2( -1, 1 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 2.59755, 3.87138 )
region_enabled = true
region_rect = Rect2( 106.25, 7.0625, 10.125, 13.25 )

[node name="arm down" type="Sprite" parent="Node2D/Hips/Belt/body/arm up2"]
position = Vector2( 3.59833, 6.68261 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 1.20303, 4.78622 )
region_enabled = true
region_rect = Rect2( 111.75, 22.6875, 8.125, 12.875 )

[node name="hand" type="Sprite" parent="Node2D/Hips/Belt/body/arm up2/arm down"]
position = Vector2( 2.57563, 10.4526 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 112, 37.9375, 5.625, 5.875 )

[node name="Head" type="Sprite" parent="Node2D/Hips/Belt/body"]
position = Vector2( -0.400078, -15.5443 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 6.375, 17.8125, 20.25, 19.875 )

[node name="Hair Side2" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -5.48219, 5.76211 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 38.5, 38.625, 14.75, 34.25 )

[node name="Ear" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( 13.1384, 2.14571 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 38.375, 26.8125, 11.375, 10.125 )

[node name="mouth" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -4, 8.42777 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 41.75, 21.3125, 4.5, 3.5 )

[node name="Ear2" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -11.7917, 2.37654 )
scale = Vector2( -1, 1 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 38.375, 26.8125, 11.375, 10.125 )

[node name="HairBack" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( 1.42395, -2.42072 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 4, 38.25, 31, 27.25 )

[node name="Hair Front" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -2.13495, -4.82822 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 14.75, 1.8125, 15.375, 14.75 )

[node name="Hair Side" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( 6.98758, 5.57318 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 38.5, 38.625, 14.75, 34.25 )

[node name="Eyebrown" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( 2.63562, -1.90432 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 36.375, 1.3125, 9, 4.375 )

[node name="Eyebrown2" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -8.25591, -1.83122 )
scale = Vector2( -0.5, 1 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 36.375, 1.3125, 9, 4.375 )

[node name="Eyewhite" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( 1.69356, 3.20801 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 37.625, 5.9375, 11.25, 7.5 )

[node name="Eyewhite2" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -9.19797, 3.28111 )
scale = Vector2( -0.66, 1 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 37.625, 5.9375, 11.25, 7.5 )

[node name="Eye" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -0.449823, 2.61262 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 41.875, 14.9375, 3.875, 5.125 )

[node name="Eye2" type="Sprite" parent="Node2D/Hips/Belt/body/Head"]
position = Vector2( -8.17108, 2.36332 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 41.875, 14.9375, 3.875, 5.125 )

[node name="Leg Up" type="Sprite" parent="Node2D/Hips"]
editor/display_folded = true
position = Vector2( 2.58815, 9.6758 )
rotation = -3.14159
scale = Vector2( 1, -1 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 103.75, 81.25, 12.125, 19.375 )

[node name="Leg Down" type="Sprite" parent="Node2D/Hips/Leg Up"]
position = Vector2( -1.2988, 7.43783 )
scale = Vector2( -1, 1 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 1.40492, 7.86707 )
region_enabled = true
region_rect = Rect2( 105.75, 103.375, 11.25, 21.625 )

[node name="Leg Up2" type="Sprite" parent="Node2D/Hips"]
editor/display_folded = true
position = Vector2( -5.71371, 9.55371 )
rotation = -3.14159
scale = Vector2( 1, -1 )
z_index = -1
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 103.75, 81.25, 12.125, 19.375 )

[node name="Leg Down" type="Sprite" parent="Node2D/Hips/Leg Up2"]
position = Vector2( -0.476325, 7.17438 )
scale = Vector2( -1, 1 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 2.22739, 8.13052 )
region_enabled = true
region_rect = Rect2( 105.75, 103.375, 11.25, 21.625 )

[connection signal="animation_finished" from="Menu Items/Menu/Bullet Time/Bullet Time" to="Menu Items" method="_on_Bullet_Time_animation_finished"]
